# Voiceintel

./: .replit  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--1634-ai-generated-at-datetime-datetime-2026-4-30-6-54-_1777532083953.txt  Pasted--ERROR-app-Exception-on-admin-integrations-POST-Traceba_1777435633290.txt  Pasted-0-recycled-write-0-160-s-sync-0-096-s-total-0-371-s-syn_1777438523466.txt  Pasted-2026-04-28-22-32-53-721-ERROR-app-Exception-on-GET-Trac_1777415590961.txt  Pasted-Build-a-working-MVP-web-app-called-VoiceIntel-Goal-Crea_1777400966049.txt  Pasted-Reading-package-lists-Done-Building-dependency-tree-Don_1777505826033.txt  Pasted-app-1-2026-04-29-05-00-18-160-INFO-app-services-webhook_1777438878024.txt  Pasted-app-1-2026-04-29-05-00-18-160-INFO-app-services-webhook_1777439017076.txt  Pasted-app-1-2026-04-29-05-48-57-624-INFO-httpx-HTTP-Request-P_1777441820093.txt  Pasted-app-1-2026-04-29-05-48-57-624-INFO-httpx-HTTP-Request-P_1777442254347.txt  Pasted-heckpoint-complete-wrote-43-buffers-0-3-0-WAL-file-s-ad_1777472270002.txt  Pasted-obtv-admin-voice-intel1-Voiceintel-artifacts-voiceintel_1777433913746.txt  Pasted-obtv-admin-voiceai-svr1-Voiceintel-artifacts-voiceintel_1777507393237.txt  Pasted-obtv-admin-voiceai-svr1-Voiceintel-artifacts-voiceintel_1777507461206.txt  Pasted-obtv-admin-voiceai-svr1-Voiceintel-artifacts-voiceintel_1777507490122.txt  Pasted-obtv-admin-voiceai-svr1-lspci-00-00-0-Host-bridge-Intel_1777501524683.txt  Pasted-obtv-admin-voiceai-svr1-sudo-nvidia-ctk-runtime-configu_1777506278552.txt  (+1 more)
(+63 files in other folders)
